[package]
name = "tanici"
version = "1.0.0"
authors = ["cyanolupus <cyanolupus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cyanolupus/tanici"
description = "graduation requirements checker for University of Tsukuba"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
regex = "1"
clap = "2"
yaml-rust = "0.4"
